--- a/index.html
+++ b/index.html
@@ -21,22 +21,32 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <main class="main">
-      <section class="qr-container">
-        <div class="qr__img">
-          <img class="qr__img" src="./images/image-qr-code.png" alt="qr-code" />
-        </div>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/S-yartey007">Emmanuel Yartey</a>.
+      <main class="main">
+        <section class="qr-container">
+          <div class="qr__img">
+            <img
+              class="qr__img"
+              src="./images/image-qr-code.png"
+              alt="qr-code"
+            />
+          </div>
 
-        <div class="qr__content--container">
-          <h1 class="qr__content--header">
-            Improve your front-end skills by building projects
-          </h1>
-          <p class="qr__content--text">
-            Scan the QR code to visit Frontend Menteor and take your codings
-            skills to the next level
-          </p>
-        </div>
-      </section>
-    </main>
+          <div class="qr__content--container">
+            <h1 class="qr__content--header">
+              Improve your front-end skills by building projects
+            </h1>
+            <p class="qr__content--text">
+              Scan the QR code to visit Frontend Menteor and take your codings
+              skills to the next level
+            </p>
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
